[gd_scene load_steps=20 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_walk/quantumslayersprite_2.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_walk/quantumslayersprite_0.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_walk/quantumslayersprite_1.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_walk/quantumslayersprite_3.png" type="Texture" id=4]
[ext_resource path="res://QuantumSlayer.gd" type="Script" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_6.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_5.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_1.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_3.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_4.png" type="Texture" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_2.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_slash/quantumslayerslashsprite_0.png" type="Texture" id=12]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_stomp/quantumslayerstompsprite_1.png" type="Texture" id=13]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_stomp/quantumslayerstompsprite_0.png" type="Texture" id=14]
[ext_resource path="res://Placeholder Textures for Shards of the Past/quantumslayer_walk/quantumslayer_hurt.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "slash",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "stomp",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 19 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 8 )

[node name="Quantum Slayer" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hurt"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 7 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer8" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -19, 5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -6, -7 )
shape = SubResource( 4 )

[node name="Timer5" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer4" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer7" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
